--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<artifactId>f2aApplication</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<name>f2aApplication</name>
+	<name>f2a</name>
 	<!-- FIXME change it to the project's website -->
 	<url>http://www.example.com</url>
 
@@ -69,7 +69,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>f2aApplication</finalName>
+		<finalName>f2a</finalName>
 		<pluginManagement><!-- lock down plugins versions to avoid using Maven
 			defaults (may be moved to parent pom) -->
 			<plugins>
