--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<name>f2a</name>
 	<!-- FIXME change it to the project's website -->
-	<url>http://dialectech.net/hamRadio/</url>
+	<url>https://dialectech.net/hamRadio/</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
